修正View视图对Framework类的引用方式
1  View视图添加@using Fx.InformationPlatform.Site以此减少代码量
2 修正帖子明细视图中对地区和区域的获取方式。采用缓存获取不在通过枚举描述的方式获取。

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Account/Partial/Tab.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Account/Partial/Tab.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="grid_24">
+﻿@using Fx.InformationPlatform.Site
+<div class="grid_24">
     <div class="tab">
         <ul class="tab-title clearmargin clearfix " id="tabcontrol">
             <li class="tab-title-item"><a href="#" datatoggle="tab">发布信息</a></li>
@@ -26,6 +27,6 @@
         li.addClass('active');
     });
 </script>
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("plugins.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("plugins.js")"></script>
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("instant.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("instant.js")"></script>
