--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarList/Index.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarList/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Fx.InformationPlatform.Site.ViewModel.CarListModel
+@using Fx.InformationPlatform.Site
 @{
     ViewBag.Title = "汽车交易";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -15,7 +16,7 @@
 
 
 <div class="interval_30"></div>
-@Html.Partial("Partial/SecondHandCar",Model.SecondHandCars)
+@Html.Partial("Partial/SecondHandCar", Model.SecondHandCars)
 <div class="interval_20"></div>
 @Html.Partial("Partial/Ad1")
 <div class="interval_20"></div>
@@ -23,9 +24,9 @@
 
 
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("jquery.SuperSlide.js")"></script>
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("slider.js")"></script>
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("List.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("jquery.SuperSlide.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("slider.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("List.js")"></script>
 
 
 <script>
