--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Index.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Index.cshtml
@@ -38,8 +38,8 @@
 <div class="interval_30"></div>
 
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("jquery.SuperSlide.js")"></script>
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("slider.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("jquery.SuperSlide.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("slider.js")"></script>
 
 <script>
     $(document).ready(function () {
