--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Flash.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Flash.cshtml
@@ -1,35 +1,36 @@
-﻿<div class="box" id="slider">
+﻿@using Fx.InformationPlatform.Site
+<div class="box" id="slider">
     <div class="left_bss" id="left_btns"></div>
     <div class="right_bss" id="right_btns"></div>
     <ul style="margin-left:0px;">
         <li>
             <div class="grid_11 alpha">
                 <a href="#">
-                    <img class="img1" src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("home/left1.png")" /></a>
+                    <img class="img1" src="@AppSettings.ImageDomain("home/left1.png")" /></a>
             </div>
             <div class="grid_7 omega">
                 <a href="#">
-                    <img class="img2" src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("home/right1.png")" /></a>
+                    <img class="img2" src="@AppSettings.ImageDomain("home/right1.png")" /></a>
             </div>
         </li>
         <li>
             <div class="grid_11 alpha">
                 <a href="#">
-                    <img class="img1" src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("home/left2.png")" /></a>
+                    <img class="img1" src="@AppSettings.ImageDomain("home/left2.png")" /></a>
             </div>
             <div class="grid_7 omega">
                 <a href="#">
-                    <img class="img2" src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("home/right2.png")" /></a>
+                    <img class="img2" src="@AppSettings.ImageDomain("home/right2.png")" /></a>
             </div>
         </li>
         <li>
             <div class="grid_11 alpha">
                 <a href="#">
-                    <img class="img1" src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("home/left3.png")" /></a>
+                    <img class="img1" src="@AppSettings.ImageDomain("home/left3.png")" /></a>
             </div>
             <div class="grid_7 omega">
                 <a href="#">
-                    <img class="img2" src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("home/right3.png")" /></a>
+                    <img class="img2" src="@AppSettings.ImageDomain("home/right3.png")" /></a>
             </div>
         </li>
     </ul>
