--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Buy/Index.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Buy/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<Fx.Entity.FxSite.Channel>
+@using Fx.InformationPlatform.Site
 @{
     Layout = "~/Views/Shared/_LayoutClean.cshtml";
     ViewBag.Title = "免费发布信息";
@@ -6,4 +7,4 @@
 <input id="selectcatid" type="hidden" value="@ViewBag.Select" />
 @Html.Partial("Partial/Flow")
 @Html.Partial("Partial/Channel",Model)
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("Channel.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("Channel.js")"></script>
