--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarTransferSearch/Partial/MainCar.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/CarTransferSearch/Partial/MainCar.cshtml
@@ -8,7 +8,7 @@
         {
     <div class="rows_wks_sr_list">
         <a href="/CarTransferDetail/Index/@item.CarTransferInfoId" target="_blank" class="lefts_demo_imgs">
-            <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.MinImageUrl)" />
+            <img src="@AppSettings.ImageUploadCdnDomain(picture.MinImageUrl)" />
         </a>
         <div class="right_details_wkss">
             <div class="tops_tddds">
