--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsBuy/Electronics.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsBuy/Electronics.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Fx.InformationPlatform.Site.ViewModel.BuyViewGoods
+@using Fx.InformationPlatform.Site
 @{
     Layout = "~/Views/Shared/_LayoutClean.cshtml";
     ViewBag.Title = "发布二手求购信息";
@@ -14,13 +15,13 @@
 }
 @Html.Partial("buyModal")
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("Ajax/AjaxBaseRequest.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("Ajax/AjaxBaseRequest.js")"></script>
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("Ajax/AjaxGoodsBuyRequest.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("Ajax/AjaxGoodsBuyRequest.js")"></script>
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("Buy/BuyValidGoods.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("Buy/BuyValidGoods.js")"></script>
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("Buy/BuyGoodsEvent.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("Buy/BuyGoodsEvent.js")"></script>
 
 <!--多文件上传解决方案-->
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("MutiUpload/MultiFile.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("MutiUpload/MultiFile.js")"></script>
