--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsBuySearch/Partial/TopGoods.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsBuySearch/Partial/TopGoods.cshtml
@@ -10,7 +10,7 @@
             {
     <div class="rows_wks_sr_list">
         <a href="/GoodsBuyDetail/Index/@item.GoodsBuyInfoId" target="_blank" class="lefts_demo_imgs">
-            <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.MinImageUrl)" /></a>
+            <img src="@AppSettings.ImageUploadCdnDomain(picture.MinImageUrl)" /></a>
         <div class="right_details_wkss">
             <div class="tops_tddds">
                 <div class="tops_tddds_names"><a href="/GoodsBuyDetail/Index/@item.GoodsBuyInfoId" target="_blank">@item.PublishTitle</a></div>
