--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsList/Index.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsList/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Fx.InformationPlatform.Site.ViewModel.GoodsListModel
+@using Fx.InformationPlatform.Site
 @{
     ViewBag.Title = "物品交易";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -32,9 +33,9 @@
 @Html.Partial("Partial/Ad3")
 <div class="interval_20"></div>
 
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("jquery.SuperSlide.js")"></script>
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("slider.js")"></script>
-<script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("List.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("jquery.SuperSlide.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("slider.js")"></script>
+<script type="text/javascript" src="@AppSettings.JavaScriptDomain("List.js")"></script>
 
 
 <script>
