--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsList/Partial/CultureLife.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/GoodsList/Partial/CultureLife.cshtml
@@ -1,7 +1,8 @@
 ﻿@model List<Fx.Entity.FxGoods.GoodsTransferInfo>
+@using Fx.InformationPlatform.Site
 <div class="grid_24">
     <div class="grid_3 alpha">
-        <img class="list_left_img_demo_tit" src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("goodsList/CultureLife.png")">
+        <img class="list_left_img_demo_tit" src="@AppSettings.ImageDomain("goodsList/CultureLife.png")">
     </div>
     <div class="grid_21 omega" style="text-align: left; float: right;">
         <div class="topLoop" id="sliders_1" style="width: 830px; height: 243px;">
@@ -18,16 +19,16 @@
                                         if (picture.TransferPictureCatagroy == (int)Fx.Entity.PictureCatagroy.Head)
                                         {
                                         <div style="height: 200px;">
-                                            <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
+                                            <a href="@AppSettings.GoodsTransferLink(Model[i].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
 
-                                                <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
+                                                <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
                                             </a>
                                         </div>
                                             break;
                                         }
                                     }
                                     <div class="tits_btm_coms_list names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i].GoodsTransferInfoId)">
+                                        <a href="@AppSettings.GoodsTransferLink(Model[i].GoodsTransferInfoId)">
                                             @if (Model[i].PublishTitle != null && Model[i].PublishTitle.Length >= 8)
                                            {
                                                 @(Model[i].PublishTitle.Substring(0, 8) + "...")                                                                                                
@@ -48,16 +49,16 @@
                                         if (picture.TransferPictureCatagroy == (int)Fx.Entity.PictureCatagroy.Head)
                                         {
                                         <div style="height: 200px;">
-                                            <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i + 1].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
+                                            <a href="@AppSettings.GoodsTransferLink(Model[i + 1].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
 
-                                                <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
+                                                <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
                                             </a>
                                         </div>
                                             break;
                                         }
                                     }
                                     <div class="tits_btm_coms_list names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i + 1].GoodsTransferInfoId)">
+                                        <a href="@AppSettings.GoodsTransferLink(Model[i + 1].GoodsTransferInfoId)">
                                             @if (Model[i + 1].PublishTitle != null && Model[i + 1].PublishTitle.Length >= 8)
                                             {
                                                 @(Model[i + 1].PublishTitle.Substring(0, 8) + "...")                                                                                                
@@ -78,16 +79,16 @@
                                         if (picture.TransferPictureCatagroy == (int)Fx.Entity.PictureCatagroy.Head)
                                         {
                                         <div style="height: 200px;">
-                                            <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i + 2].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
+                                            <a href="@AppSettings.GoodsTransferLink(Model[i + 2].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
 
-                                                <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
+                                                <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
                                             </a>
                                         </div>
                                             break;
                                         }
                                     }
                                     <div class="tits_btm_coms_list names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i + 2].GoodsTransferInfoId)">
+                                        <a href="@AppSettings.GoodsTransferLink(Model[i + 2].GoodsTransferInfoId)">
                                             @if (Model[i + 2].PublishTitle != null && Model[i + 2].PublishTitle.Length >= 8)
                                             {
                                                 @(Model[i + 2].PublishTitle.Substring(0, 8) + "...")                                                                                                
@@ -108,16 +109,16 @@
                                         if (picture.TransferPictureCatagroy == (int)Fx.Entity.PictureCatagroy.Head)
                                         {
                                         <div style="height: 200px;">
-                                            <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i + 3].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
+                                            <a href="@AppSettings.GoodsTransferLink(Model[i + 3].GoodsTransferInfoId)" class="tops_aa_imgs_kk">
 
-                                                <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
+                                                <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)"/>
                                             </a>
                                         </div>
                                             break;
                                         }
                                     }
                                     <div class="tits_btm_coms_list names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.GoodsTransferLink(Model[i + 3].GoodsTransferInfoId)">
+                                        <a href="@AppSettings.GoodsTransferLink(Model[i + 3].GoodsTransferInfoId)">
                                             @if (Model[i + 3].PublishTitle != null && Model[i + 3].PublishTitle.Length >= 8)
                                             {
                                                 @(Model[i + 3].PublishTitle.Substring(0, 8) + "...")                                                                                                
