--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Car.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Car.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Fx.InformationPlatform.Site.ViewModel.HomeCarModel
+@using Fx.InformationPlatform.Site
 <div class="grid_24">
     <div class="grid_5 alpha">
         <div class="hot_tags">
             <div class="thing_deal_tops">
-                <img src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("car.png")" />
+                <img src="@AppSettings.ImageDomain("car.png")" />
             </div>
             <div class="interval_line_c"></div>
             <div class="thing_deal_hot_tag">
@@ -66,12 +67,12 @@
                                 <div class="img_cons_wks_common">
                                     <div class="tits_btm_coms_index">最新发布</div>
                                     <div class="interval_line_c"></div>
-                                    <a href="@Fx.InformationPlatform.Site.AppSettings.CarTransferLink(item.CarTransferInfoId)" class="imgs_a"  target="_blank" >
-                                        <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
+                                    <a href="@AppSettings.CarTransferLink(item.CarTransferInfoId)" class="imgs_a"  target="_blank" >
+                                        <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
 
                                     </a>
                                     <div class="tits_btm_coms_index names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.CarTransferLink(item.CarTransferInfoId)"  target="_blank" >
+                                        <a href="@AppSettings.CarTransferLink(item.CarTransferInfoId)"  target="_blank" >
                                             @item.PublishTitle
                                             &nbsp;
                                             ￡@item.Price
@@ -106,12 +107,12 @@
                                 <div class="img_cons_wks_common">
                                     <div class="tits_btm_coms_index">最新发布</div>
                                     <div class="interval_line_c"></div>
-                                    <a href="@Fx.InformationPlatform.Site.AppSettings.CarTransferLink(item.CarTransferInfoId)" class="imgs_a"  target="_blank" >
-                                        <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
+                                    <a href="@AppSettings.CarTransferLink(item.CarTransferInfoId)" class="imgs_a"  target="_blank" >
+                                        <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
 
                                     </a>
                                     <div class="tits_btm_coms_index names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.CarTransferLink(item.CarTransferInfoId)"  target="_blank" >
+                                        <a href="@AppSettings.CarTransferLink(item.CarTransferInfoId)"  target="_blank" >
                                             @item.PublishTitle
                                             &nbsp;
                                             ￡@item.Price
@@ -146,12 +147,12 @@
                                 <div class="img_cons_wks_common">
                                     <div class="tits_btm_coms_index">最新发布</div>
                                     <div class="interval_line_c"></div>
-                                    <a href="@Fx.InformationPlatform.Site.AppSettings.CarTransferLink(item.CarTransferInfoId)" class="imgs_a"  target="_blank" >
-                                        <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
+                                    <a href="@AppSettings.CarTransferLink(item.CarTransferInfoId)" class="imgs_a"  target="_blank" >
+                                        <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
 
                                     </a>
                                     <div class="tits_btm_coms_index names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.CarTransferLink(item.CarTransferInfoId)"  target="_blank" >
+                                        <a href="@AppSettings.CarTransferLink(item.CarTransferInfoId)"  target="_blank" >
                                             @item.PublishTitle
                                             &nbsp;
                                             ￡@item.Price
