--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/House.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/House.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Fx.InformationPlatform.Site.ViewModel.HomeHouseModel
+@using Fx.InformationPlatform.Site
 <div class="grid_24">
     <!--标签-->
     <div class="grid_5 alpha">
         <div class="hot_tags">
             <div class="thing_deal_tops">
-                <img src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("house.png")" />
+                <img src="@AppSettings.ImageDomain("house.png")" />
             </div>
             <div class="interval_line_c"></div>
             <div class="thing_deal_hot_tag">
@@ -59,12 +60,12 @@
                                 <div class="img_cons_wks_common">
                                     <div class="tits_btm_coms_index">最新发布</div>
                                     <div class="interval_line_c"></div>
-                                    <a href="@Fx.InformationPlatform.Site.AppSettings.HouseTransferLink(item.HouseTransferInfoId)" class="imgs_a"  target="_blank" >
-                                        <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
+                                    <a href="@AppSettings.HouseTransferLink(item.HouseTransferInfoId)" class="imgs_a"  target="_blank" >
+                                        <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
 
                                     </a>
                                     <div class="tits_btm_coms_index names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.HouseTransferLink(item.HouseTransferInfoId)"  target="_blank" >
+                                        <a href="@AppSettings.HouseTransferLink(item.HouseTransferInfoId)"  target="_blank" >
                                             @item.PublishTitle
                                             &nbsp;
                                             ￡@item.Price
@@ -100,12 +101,12 @@
                                 <div class="img_cons_wks_common">
                                     <div class="tits_btm_coms_index">最新发布</div>
                                     <div class="interval_line_c"></div>
-                                    <a href="@Fx.InformationPlatform.Site.AppSettings.HouseTransferLink(item.HouseTransferInfoId)" class="imgs_a"  target="_blank" >
-                                        <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
+                                    <a href="@AppSettings.HouseTransferLink(item.HouseTransferInfoId)" class="imgs_a"  target="_blank" >
+                                        <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
 
                                     </a>
                                     <div class="tits_btm_coms_index names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.HouseTransferLink(item.HouseTransferInfoId)"  target="_blank" >
+                                        <a href="@AppSettings.HouseTransferLink(item.HouseTransferInfoId)"  target="_blank" >
                                             @item.PublishTitle
                                             &nbsp;
                                             ￡@item.Price
@@ -140,12 +141,12 @@
                                 <div class="img_cons_wks_common">
                                     <div class="tits_btm_coms_index">最新发布</div>
                                     <div class="interval_line_c"></div>
-                                    <a href="@Fx.InformationPlatform.Site.AppSettings.HouseTransferLink(item.HouseTransferInfoId)" target="_blank" class="imgs_a">
-                                        <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
+                                    <a href="@AppSettings.HouseTransferLink(item.HouseTransferInfoId)" target="_blank" class="imgs_a">
+                                        <img src="@AppSettings.ImageUploadCdnDomain(picture.ImageUrl)" />
 
                                     </a>
                                     <div class="tits_btm_coms_index names_btm">
-                                        <a href="@Fx.InformationPlatform.Site.AppSettings.HouseTransferLink(item.HouseTransferInfoId)"  target="_blank" >
+                                        <a href="@AppSettings.HouseTransferLink(item.HouseTransferInfoId)"  target="_blank" >
                                             @item.PublishTitle
                                             &nbsp;
                                             ￡@item.Price
