--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Menu.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Home/Partial/Menu.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="grid_3 alpha height_30" style="font-size: 16px;color: #8A0018; font-weight:bold;">| 发布信息 |</div>
+﻿@using Fx.InformationPlatform.Site
+<div class="grid_3 alpha height_30" style="font-size: 16px;color: #8A0018; font-weight:bold;">| 发布信息 |</div>
 <div class="clear"></div>
 <style type="text/css">
     .pb_li_info_rows {
@@ -56,7 +57,7 @@
 </style>
 
 <span class="pb_li_info_rows">
-    <img src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("glyphicons_202_shopping_cart.png")" class="imgs_icons" />
+    <img src="@AppSettings.ImageDomain("glyphicons_202_shopping_cart.png")" class="imgs_icons" />
     <span class="word_info"><span>物品交易</span>
         <span style="margin-left: 30px; margin-right: 10px;">
             @Html.ActionLink("转让", "Index", "Transfer", new { id = 0 }, new { target = "_blank", @class = "btn btn-mini" })
@@ -68,7 +69,7 @@
     <span class="clear"></span>
 </span>
 <span class="pb_li_info_rows">
-    <img src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("glyphicons_028_cars.png")" class="imgs_icons" />
+    <img src="@AppSettings.ImageDomain("glyphicons_028_cars.png")" class="imgs_icons" />
     <span class="word_info">
         <span>汽车交易</span>
         <span style="margin-left: 30px; margin-right: 10px;">
@@ -80,7 +81,7 @@
     </span>
 </span>
 <span class="pb_li_info_rows">
-    <img src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("glyphicons_020_home.png")" class="imgs_icons" />
+    <img src="@AppSettings.ImageDomain("glyphicons_020_home.png")" class="imgs_icons" />
     <span class="word_info">
         <span>房屋信息</span>
         <span style="margin-left: 30px; margin-right: 10px;">
@@ -92,4 +93,4 @@
     </span>
 </span>
 <a href="javascript:void(0)" class="pb_li_info_rows">
-    <img src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("glyphicons_194_circle_question_mark.png")" class="imgs_icons" /><span class="word_info">Coming Soon</span></a>
+    <img src="@AppSettings.ImageDomain("glyphicons_194_circle_question_mark.png")" class="imgs_icons" /><span class="word_info">Coming Soon</span></a>
