--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Search/Partial/HouseTransfer/MainHouse.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Search/Partial/HouseTransfer/MainHouse.cshtml
@@ -8,7 +8,7 @@
         {
     <div class="rows_wks_sr_list">
         <a href="/HouseTransferDetail/Index/@item.HouseTransferInfoId" target="_blank" class="lefts_demo_imgs">
-            <img src="@Fx.InformationPlatform.Site.AppSettings.ImageUploadCdnDomain(picture.MinImageUrl)" /></a>
+            <img src="@AppSettings.ImageUploadCdnDomain(picture.MinImageUrl)" /></a>
         <div class="right_details_wkss">
             <div class="tops_tddds">
                 <div class="tops_tddds_names"><a href="/HouseTransferDetail/Index/@item.HouseTransferInfoId" target="_blank">@item.PublishTitle</a></div>
