--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Shared/_LayoutClean.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Shared/_LayoutClean.cshtml
@@ -1,17 +1,17 @@
-﻿<!DOCTYPE html>
-
+﻿@using Fx.InformationPlatform.Site
+<!DOCTYPE html>
 <html>
 <head>
     <title>@ViewBag.Title</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("favicon.ico")" />
-    <link rel="stylesheet" href="@Fx.InformationPlatform.Site.AppSettings.CssDomain("960_24_col.css")" />
-    <link href="@Fx.InformationPlatform.Site.AppSettings.CssDomain("base.css")" rel="stylesheet" type="text/css" />
-    <link href="@Fx.InformationPlatform.Site.AppSettings.CssDomain("bootstrap.css")" rel="stylesheet" type="text/css" />
-    <link href="@Fx.InformationPlatform.Site.AppSettings.CssDomain("customize.css")" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("jquery-1.8.2.min.js")"></script>
-    <script type="text/javascript" src="@Fx.InformationPlatform.Site.AppSettings.JavaScriptDomain("bootstrap.js")"></script>
+    <link rel="shortcut icon" href="@AppSettings.ImageDomain("favicon.ico")" />
+    <link rel="stylesheet" href="@AppSettings.CssDomain("960_24_col.css")" />
+    <link href="@AppSettings.CssDomain("base.css")" rel="stylesheet" type="text/css" />
+    <link href="@AppSettings.CssDomain("bootstrap.css")" rel="stylesheet" type="text/css" />
+    <link href="@AppSettings.CssDomain("customize.css")" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="@AppSettings.JavaScriptDomain("jquery-1.8.2.min.js")"></script>
+    <script type="text/javascript" src="@AppSettings.JavaScriptDomain("bootstrap.js")"></script>
 
     @if (Fx.InformationPlatform.Site.T4Helper.IsDebug)
     {
