--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Shared/_Logo.cshtml
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Views/Shared/_Logo.cshtml
@@ -1,10 +1,11 @@
-﻿<!--logo和搜索框-->
+﻿@using Fx.InformationPlatform.Site
+<!--logo和搜索框-->
 @using (Html.BeginForm("HomeSearchFacade", "Home", FormMethod.Post, new { enctype = "multipart/form-data", id = "homeForm" }))
 {
     <div class="grid_24" style="padding-top: 20px;">
         <div class="grid_5 alpha">
-            <a href="@Fx.InformationPlatform.Site.AppSettings.YingTaoUrl()">
-                <img src="@Fx.InformationPlatform.Site.AppSettings.ImageDomain("logo.png")" class="logo_img" alt="英淘网"/>
+            <a href="@AppSettings.YingTaoUrl()">
+                <img src="@AppSettings.ImageDomain("logo.png")" class="logo_img" alt="英淘网"/>
             </a>
         </div>
         <div class="grid_19 omega">
